--- a/SCSS/_mobile.scss
+++ b/SCSS/_mobile.scss
@@ -8,4 +8,10 @@
     .lmenu1{
         margin-left: 0px;
     }
+    .COLOR{
+        margin-bottom: 70px;
+    }
+    .mrb{
+        margin-bottom: 90px;
+    }
 }
