--- a/SCSS/_mobile.scss
+++ b/SCSS/_mobile.scss
@@ -9,9 +9,12 @@
         margin-left: 0px;
     }
     .COLOR{
-        margin-bottom: 100px;
+        margin-bottom: 130px;
     }
     .mrb{
-        margin-bottom: 130px;
+        margin-bottom: 200px;
+    }
+    .footer{
+        padding: 30px;
     }
 }
