--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -99,25 +99,74 @@ li a:hover {
   .footer {
     padding: 30px; } }
 
-footer {
-  background-color: gray;
-  padding: 15px; }
-  footer h3 {
-    font-family: "Bebas Neue", cursive;
-    color: black;
-    font-size: 1rem; }
+footer h3 {
+  font-family: "Bebas Neue", cursive;
+  color: black;
+  font-size: 1rem; }
 
-.wapp {
-  display: flex;
-  align-items: center;
-  justify-content: right; }
-  .wapp img {
-    width: 25px; }
+.father {
+  margin: 20px;
+  padding: 15px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 5fr;
+  grid-template-areas: "contact redes mailing"; }
+  .father .redes .rimg {
+    display: flex;
+    align-items: center;
+    margin-top: 25px; }
+    .father .redes .rimg .wimg {
+      width: 30px;
+      margin-left: 130px; }
+    .father .redes .rimg .iimg {
+      width: 30px;
+      margin-left: 35px; }
+    .father .redes .rimg .timg {
+      width: 30px;
+      margin-left: 35px; }
 
-.insta {
-  display: flex;
-  align-items: center;
-  justify-content: left; }
-  .insta img {
-    width: 25px;
-    margin-left: 10px; }
+.contact {
+  grid-area: contact; }
+
+.redes {
+  grid-area: redes; }
+
+.mailing {
+  grid-area: mailing;
+  padding-left: 80px;
+  padding-right: 80px; }
+
+/*    <footer class="footer">
+      <div class="row">
+        <div class="wapp col-6">
+          <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
+          <h3 class="m-3">
+            +54 2235825600
+          </h3>
+        </div>
+        <div class="insta col-6">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg"  alt="">
+          <h3 class="m-3">
+            Vivi.espacio
+          </h3>
+        </div>
+      </div>
+    </footer>*/
+/*
+.wapp{
+    @include contenido_flex;
+    justify-content: right;
+    img{
+        width: 25px;
+    } 
+}
+.insta{
+    @include contenido_flex;
+    justify-content: left;
+    img{
+        width: 25px;
+        margin-left: 10px;
+    }
+}
+*/
