--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -19,7 +19,8 @@ footer{
             .rimg{
                 @include contenido_flex;
                 margin-top: 25px;
-                .wimg{
+                
+                .fimg{
                     width: 30px;
                     margin-left: 130px;
                 }
