--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -46,38 +46,21 @@ footer{
     padding-left: 80px;
     padding-right: 80px;
 }
- /*    <footer class="footer">
-      <div class="row">
-        <div class="wapp col-6">
-          <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
-          <h3 class="m-3">
-            +54 2235825600
-          </h3>
-        </div>
-        <div class="insta col-6">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg"  alt="">
-          <h3 class="m-3">
-            Vivi.espacio
-          </h3>
-        </div>
-      </div>
-    </footer>*/
 
-
-/*
-.wapp{
-    @include contenido_flex;
-    justify-content: right;
-    img{
-        width: 25px;
-    } 
-}
-.insta{
-    @include contenido_flex;
-    justify-content: left;
-    img{
-        width: 25px;
-        margin-left: 10px;
+.footer{
+    .wapp{
+        @include contenido_flex;
+        justify-content: right;
+        img{
+            width: 25px;
+        } 
+    }
+    .insta{
+        @include contenido_flex;
+        justify-content: left;
+        img{
+            width: 25px;
+            margin-left: 10px;
+        }
     }
 }
-*/
