--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -22,7 +22,7 @@ body {
 
 .COLOR {
   background-color: whitesmoke;
-  margin-bottom: 50px; }
+  margin-bottom: 0px; }
 
 .logo {
   width: 170px; }
@@ -40,6 +40,12 @@ li a:hover {
 .lmenud {
   font-family: "Bebas Neue", cursive;
   font-size: 1.1rem; }
+
+.titulo {
+  font-family: "Bebas Neue", cursive;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 60px; }
 
 .frase1 {
   font-family: "MonteCarlo", cursive;
@@ -102,7 +108,7 @@ li a:hover {
   .lmenu1 {
     margin-left: 0px; }
   .COLOR {
-    margin-bottom: 130px; }
+    margin-bottom: 40px; }
   .mrb {
     margin-bottom: 100px; }
   footer .father {
@@ -113,7 +119,9 @@ li a:hover {
 
 @media screen and (min-width: 950px) {
   .footer {
-    display: none; } }
+    display: none; }
+  .titulo {
+    visibility: hidden; } }
 
 footer h3 {
   font-family: "Bebas Neue", cursive;
@@ -122,6 +130,7 @@ footer h3 {
 
 .father {
   margin: 20px;
+  margin-top: 80px;
   padding: 15px;
   text-align: center;
   display: grid;
