--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -4,7 +4,7 @@
     margin-bottom: 60px;
 }
 .frase1{
-    @include frases($letra_cursiva, 4rem)
+    @include frases($letra_imprenta, 4rem)
 }
 .alto{
     height: 600px;
