--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -48,7 +48,7 @@ li a:hover {
   margin-bottom: 60px; }
 
 .frase1 {
-  font-family: "MonteCarlo", cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 4rem; }
 
 .alto {
